crates/ra_ide_api/src/completion/snapshots/completion_item__struct_field_completion_autoderef.snap
---
created: "2019-01-22T15:38:19.541947400+00:00"
creator: insta@0.4.0
expression: kind_completions
source: "crates\\ra_ide_api\\src\\completion\\completion_item.rs"
---
[
    CompletionItem {
        completion_kind: Reference,
        label: "the_field",
        kind: Some(
            Field
        ),
        detail: Some(
            "(u32, i32)"
        ),
        documentation: None,
        lookup: None,
        insert_text: None,
        insert_text_format: PlainText,
        source_range: [126; 126),
        text_edit: None
    },
    CompletionItem {
        completion_kind: Reference,
        label: "foo",
        kind: Some(
            Method
        ),
        detail: Some(
            "fn foo(&self)"
        ),
        documentation: None,
        lookup: None,
        insert_text: Some(
            "foo($0)"
        ),
        insert_text_format: Snippet,
        source_range: [126; 126),
        text_edit: None
    }
]
