crates/ra_ide_api/src/completion/snapshots/completion_item__tuple_field_completion.snap
---
created: "2019-02-18T09:10:51.944941196Z"
creator: insta@0.6.2
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "0",
        source_range: [75; 75),
        text_edit: TextEdit {
            atoms: [
                AtomTextEdit {
                    delete: [75; 75),
                    insert: "0"
                }
            ]
        },
        kind: Field,
        detail: "i32"
    },
    CompletionItem {
        label: "1",
        source_range: [75; 75),
        text_edit: TextEdit {
            atoms: [
                AtomTextEdit {
                    delete: [75; 75),
                    insert: "1"
                }
            ]
        },
        kind: Field,
        detail: "f64"
    }
]
