crates/ra_ide_api/src/completion/snapshots/completion_item__tuple_field_inference.snap
---
created: "2019-04-05T23:00:18.283812700Z"
creator: insta@0.7.4
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "blah",
        source_range: [299; 300),
        delete: [299; 300),
        insert: "blah()$0",
        kind: Method,
        detail: "pub fn blah(&self)"
    }
]
