crates/ra_ide_api/src/completion/snapshots/completion_item__union_associated_method.snap
---
created: "2019-06-29T10:37:44.968500164Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "m",
        source_range: [101; 101),
        delete: [101; 101),
        insert: "m()$0",
        kind: Function,
        detail: "fn m()",
        documentation: Documentation(
            "An associated method",
        ),
    },
]
