crates/ra_ide_api/src/completion/snapshots/completion_item__use_item_starting_with_self.snap
---
created: "2019-05-23T22:23:35.106923266Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "Bar",
        source_range: [26; 26),
        delete: [26; 26),
        insert: "Bar",
        kind: Struct,
    },
]
